--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,9 @@ faker==19.3.1
 tqdm==4.66.1
 openpyxl==3.1.2
 python-dateutil==2.8.2
+xlrd==2.0.1
+
+# 測試相關依賴
+coverage==7.3.2
+pytest==7.4.2
+pytest-cov==4.1.0
